# nrgameengine

./: CMakeLists.txt  README.md  example.json  techinfo.md
src/: main.cpp
src/adapters/sdl/: SDLAudio.cpp  SDLAudio.h  SDLGraphics.cpp  SDLGraphics.h  SDLInput.cpp  SDLInput.h  SDLSurface.cpp  SDLSurface.h  SDLTimer.cpp  SDLTimer.h
src/core/engine/: Engine.cpp  Engine.h  GameLoader.cpp  GameLoader.h  LuaApi.cpp  LuaApi.h  ScriptManager.cpp  ScriptManager.h
src/core/model/: Alarm.h  Collision.h  Entity.h  Game.cpp  Game.h  Instance.cpp  Instance.h  Scene.cpp  Scene.h
src/core/resources/: Animation.h  Image.h  Script.h  Sound.h
src/ports/: IAudio.h  IGraphics.h  IInput.h  ISurface.h  ITimer.h  KeyCode.h
